# mem2reg-sccp

./: .gitignore  .gitmsg_phi.txt  .gitmsg_phitest.txt  CMakeLists.txt  README.md  run.sh  setup.sh
src/: CMakeLists.txt
src/mem2reg/: CMakeLIsts.txt  CMakeLists.txt  CustomMem2Reg.cpp
src/sccp/: CMakeLists.txt  CustomSCCP.cpp
test/sccp/: phi_dead_pred.expected  phi_dead_pred.ll  phi_overdef.expected  phi_overdef.ll  phi_same_const.expected  phi_same_const.ll  rewrite_combined.expected  rewrite_combined.ll  term_const_false.expected  term_const_false.ll  term_const_true.expected  term_const_true.ll  term_switch_const.expected  term_switch_const.ll  term_unknown.expected  term_unknown.ll
tests/: test1.c  test1.expected  test1.ll  test1_pipeline.ll  test2.c  test2.expected  test2.ll  test2_after.ll  test3.c  test3.expected  test3.ll  test3_pipeline.ll
